--- a/TENHME/Application/LoginScreen/View/PINSB.storyboard
+++ b/TENHME/Application/LoginScreen/View/PINSB.storyboard
@@ -1,30 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CRt-x8-gJl">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="s0d-6b-0kx">
+        <!--PINVC-->
+        <scene sceneID="7W6-pu-jHx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController storyboardIdentifier="PINVC" id="CRt-x8-gJl" customClass="PINVC" customModule="TENHME" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sg0-Vj-zFt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 17" translatesAutoresizingMaskIntoConstraints="NO" id="fvk-Je-Zg6">
+                                <rect key="frame" x="-9" y="-7" width="409" height="235"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="235" id="1pl-Os-IW1"/>
+                                    <constraint firstAttribute="width" constant="409" id="H6z-4C-I2z"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backButton" translatesAutoresizingMaskIntoConstraints="NO" id="pMN-fL-d7f">
+                                <rect key="frame" x="25" y="85" width="18" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="18" id="Pxp-P0-2vU"/>
+                                    <constraint firstAttribute="height" constant="18" id="nuG-MD-Ngg"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your 4-digit code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mo6-H5-cL2">
+                                <rect key="frame" x="25" y="168" width="271" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="RSv-72-TF2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eto-SK-eJ8">
+                                <rect key="frame" x="25" y="227" width="41" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="gKy-p5-OcA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s7Z-ju-sfS">
+                                <rect key="frame" x="16" y="294" width="353" height="1"/>
+                                <color key="backgroundColor" red="0.8870514035" green="0.8870514035" blue="0.88705134389999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="KLg-ij-tX0"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buttonGotoPIN" translatesAutoresizingMaskIntoConstraints="NO" id="51L-wh-EeT">
+                                <rect key="frame" x="310" y="719" width="67" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="1Oe-dP-TzO"/>
+                                    <constraint firstAttribute="width" constant="67" id="uzo-dW-jl5"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Iea-EK-KzL"/>
+                        <color key="backgroundColor" red="0.98984760049999998" green="0.98984760049999998" blue="0.98984760049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fvk-Je-Zg6" secondAttribute="trailing" constant="-7" id="5OD-Ev-pdD"/>
+                            <constraint firstItem="Mo6-H5-cL2" firstAttribute="leading" secondItem="Iea-EK-KzL" secondAttribute="leading" constant="25" id="8nP-Zc-I32"/>
+                            <constraint firstItem="Eto-SK-eJ8" firstAttribute="top" secondItem="Mo6-H5-cL2" secondAttribute="bottom" constant="27" id="A4h-Ut-304"/>
+                            <constraint firstItem="fvk-Je-Zg6" firstAttribute="leading" secondItem="sg0-Vj-zFt" secondAttribute="leading" constant="-9" id="ZQ8-QK-gk9"/>
+                            <constraint firstItem="pMN-fL-d7f" firstAttribute="top" secondItem="Iea-EK-KzL" secondAttribute="top" constant="26" id="bDL-L3-6B5"/>
+                            <constraint firstItem="Iea-EK-KzL" firstAttribute="bottom" secondItem="51L-wh-EeT" secondAttribute="bottom" constant="32" id="co7-Ze-eRX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="s7Z-ju-sfS" secondAttribute="trailing" constant="8" id="dX4-hS-LiP"/>
+                            <constraint firstItem="51L-wh-EeT" firstAttribute="leading" secondItem="Iea-EK-KzL" secondAttribute="leading" constant="310" id="i1a-nC-53I"/>
+                            <constraint firstItem="Eto-SK-eJ8" firstAttribute="leading" secondItem="Iea-EK-KzL" secondAttribute="leading" constant="25" id="icP-Lr-joh"/>
+                            <constraint firstItem="pMN-fL-d7f" firstAttribute="leading" secondItem="Iea-EK-KzL" secondAttribute="leading" constant="25" id="keT-G9-Y5G"/>
+                            <constraint firstItem="fvk-Je-Zg6" firstAttribute="top" secondItem="sg0-Vj-zFt" secondAttribute="top" constant="-7" id="ncb-Cr-HEh"/>
+                            <constraint firstItem="Iea-EK-KzL" firstAttribute="trailing" secondItem="51L-wh-EeT" secondAttribute="trailing" constant="16" id="sLr-lu-aib"/>
+                            <constraint firstItem="s7Z-ju-sfS" firstAttribute="leading" secondItem="sg0-Vj-zFt" secondAttribute="leadingMargin" id="uMD-XK-veB"/>
+                            <constraint firstItem="Mo6-H5-cL2" firstAttribute="top" secondItem="pMN-fL-d7f" secondAttribute="bottom" constant="65" id="wMc-4K-v5D"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="cKU-ga-ZFG"/>
+                    <connections>
+                        <outlet property="TitleLabel" destination="Mo6-H5-cL2" id="Ye8-Sf-r8G"/>
+                        <outlet property="backImageView" destination="pMN-fL-d7f" id="ZKd-O1-tPP"/>
+                        <outlet property="gotoMapImageView" destination="51L-wh-EeT" id="ZCL-tj-J66"/>
+                        <outlet property="subTitleLabel" destination="Eto-SK-eJ8" id="AQa-m6-aQw"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="puN-qU-n5C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2918.320610687023" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Rectangle 17" width="1242" height="700"/>
+        <image name="backButton" width="31" height="54"/>
+        <image name="buttonGotoPIN" width="202" height="202"/>
     </resources>
 </document>
