--- a/TENHME/Application/LoginScreen/View/SelectLocationSB.storyboard
+++ b/TENHME/Application/LoginScreen/View/SelectLocationSB.storyboard
@@ -1,30 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rs2-2e-q5f">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="s0d-6b-0kx">
+        <!--Select LocationVC-->
+        <scene sceneID="3rP-WH-hwV">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController storyboardIdentifier="SelectLocationVC" id="rs2-2e-q5f" customClass="SelectLocationVC" customModule="TENHME" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P1p-rj-ETg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 17" translatesAutoresizingMaskIntoConstraints="NO" id="0sW-f6-9td">
+                                <rect key="frame" x="-9" y="-7" width="409" height="235"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="409" id="Eg2-Dh-R6T"/>
+                                    <constraint firstAttribute="height" constant="235" id="GaU-nb-AZu"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backButton" translatesAutoresizingMaskIntoConstraints="NO" id="Ud5-VJ-fK3">
+                                <rect key="frame" x="25" y="85" width="18" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="18" id="SOM-jB-AWp"/>
+                                    <constraint firstAttribute="height" constant="18" id="v70-MD-d45"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="kta-0O-1Yb">
+                                <rect key="frame" x="84" y="112" width="224" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="224" id="Fs1-rz-dKZ"/>
+                                    <constraint firstAttribute="height" constant="170" id="uUi-7Z-7ze"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vhJ-QE-xpS"/>
+                        <color key="backgroundColor" red="0.98984760049999998" green="0.98984760049999998" blue="0.98984760049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kta-0O-1Yb" firstAttribute="leading" secondItem="vhJ-QE-xpS" secondAttribute="leading" constant="84" id="2C4-Mg-SOW"/>
+                            <constraint firstItem="0sW-f6-9td" firstAttribute="leading" secondItem="P1p-rj-ETg" secondAttribute="leading" constant="-9" id="3H2-Ch-nig"/>
+                            <constraint firstItem="kta-0O-1Yb" firstAttribute="top" secondItem="vhJ-QE-xpS" secondAttribute="top" constant="53" id="7Dj-an-SGt"/>
+                            <constraint firstItem="Ud5-VJ-fK3" firstAttribute="top" secondItem="vhJ-QE-xpS" secondAttribute="top" constant="26" id="aOY-re-2Qc"/>
+                            <constraint firstItem="0sW-f6-9td" firstAttribute="top" secondItem="P1p-rj-ETg" secondAttribute="top" constant="-7" id="ibu-ze-RGi"/>
+                            <constraint firstItem="Ud5-VJ-fK3" firstAttribute="leading" secondItem="vhJ-QE-xpS" secondAttribute="leading" constant="25" id="j9o-jV-uVb"/>
+                            <constraint firstItem="vhJ-QE-xpS" firstAttribute="trailing" secondItem="kta-0O-1Yb" secondAttribute="trailing" constant="85" id="xgu-hV-JBa"/>
+                            <constraint firstAttribute="trailing" secondItem="0sW-f6-9td" secondAttribute="trailing" constant="-7" id="z8j-vv-sHX"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="CeV-Eh-CaY"/>
+                    <connections>
+                        <outlet property="backImageView" destination="Ud5-VJ-fK3" id="d3h-tw-X6A"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="whJ-mb-CVv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2918.320610687023" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Rectangle 17" width="1242" height="700"/>
+        <image name="backButton" width="31" height="54"/>
+        <image name="location" width="675" height="514"/>
     </resources>
 </document>
