--- a/TENHME/Application/LoginScreen/View/LoginSB.storyboard
+++ b/TENHME/Application/LoginScreen/View/LoginSB.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="933-8h-86f">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -50,17 +50,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zXV-0m-TNB">
-                                <rect key="frame" x="111" y="479" width="251" height="36"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="88T-vg-j2T"/>
-                                    <constraint firstAttribute="width" constant="251" id="Yb9-60-hBB"/>
-                                </constraints>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="light" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="tel"/>
-                            </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2d2-hC-w3d">
                                 <rect key="frame" x="69" y="523" width="308" height="1"/>
                                 <color key="backgroundColor" name="EBF0F7"/>
@@ -100,15 +89,26 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9L-dM-Xup">
+                                <rect key="frame" x="119" y="480" width="258" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="egV-vV-Ekt"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="navigateToInputNumberPhoneAct:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="3Yx-DM-4C0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2d2-hC-w3d" firstAttribute="top" secondItem="zXV-0m-TNB" secondAttribute="bottom" constant="8" symbolic="YES" id="4Fj-H0-11J"/>
+                            <constraint firstItem="f9L-dM-Xup" firstAttribute="top" secondItem="LsS-J0-MNw" secondAttribute="bottom" constant="24.670000000000002" id="8IN-4O-Ncz"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="XOQ-AP-jx7" secondAttribute="trailing" constant="24" id="8R2-WL-g1S"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zXV-0m-TNB" secondAttribute="trailing" constant="31" id="E97-E5-vvR"/>
                             <constraint firstItem="ZW7-Hw-Zom" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FmG-Zk-U4j"/>
                             <constraint firstItem="2d2-hC-w3d" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="53" id="Jit-l2-QSX"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="f9L-dM-Xup" secondAttribute="trailing" constant="16" id="KhP-G4-PzF"/>
                             <constraint firstItem="p3Z-bY-hhD" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Nls-BB-vL0"/>
                             <constraint firstItem="XOQ-AP-jx7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="Oas-aP-cuI"/>
                             <constraint firstItem="LsS-J0-MNw" firstAttribute="top" secondItem="ZW7-Hw-Zom" secondAttribute="bottom" constant="25" id="Pli-el-dOr"/>
@@ -116,25 +116,44 @@
                             <constraint firstItem="aqf-jN-krX" firstAttribute="top" secondItem="p3Z-bY-hhD" secondAttribute="bottom" constant="31" id="Ul6-Q0-02j"/>
                             <constraint firstItem="p3Z-bY-hhD" firstAttribute="top" secondItem="2d2-hC-w3d" secondAttribute="bottom" constant="32" id="Vqi-p7-ZaN"/>
                             <constraint firstItem="aqf-jN-krX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="acQ-Td-4KE"/>
+                            <constraint firstItem="f9L-dM-Xup" firstAttribute="leading" secondItem="geJ-bh-89e" secondAttribute="trailing" constant="8" symbolic="YES" id="cPz-Lh-YVO"/>
                             <constraint firstItem="2d2-hC-w3d" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailingMargin" id="egI-S7-YpM"/>
                             <constraint firstItem="XOQ-AP-jx7" firstAttribute="top" secondItem="aqf-jN-krX" secondAttribute="bottom" constant="21" id="grU-ab-7yu"/>
                             <constraint firstItem="LsS-J0-MNw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="iA9-c8-WNQ"/>
                             <constraint firstItem="p3Z-bY-hhD" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="jMB-wv-GYJ"/>
                             <constraint firstItem="ZW7-Hw-Zom" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="-6" id="kRN-MX-TbE"/>
-                            <constraint firstItem="zXV-0m-TNB" firstAttribute="leading" secondItem="geJ-bh-89e" secondAttribute="trailing" id="oc8-5D-mHK"/>
                             <constraint firstItem="geJ-bh-89e" firstAttribute="leading" secondItem="glM-XU-afh" secondAttribute="trailing" constant="11" id="pRX-FJ-wjA"/>
                             <constraint firstItem="ZW7-Hw-Zom" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="pqf-YL-BLR"/>
                             <constraint firstItem="geJ-bh-89e" firstAttribute="top" secondItem="glM-XU-afh" secondAttribute="top" id="qUR-JM-Wcu"/>
                             <constraint firstItem="XOQ-AP-jx7" firstAttribute="top" secondItem="aqf-jN-krX" secondAttribute="bottom" constant="21" id="tw7-Mp-XDt"/>
                             <constraint firstItem="glM-XU-afh" firstAttribute="top" secondItem="LsS-J0-MNw" secondAttribute="bottom" constant="31.670000000000002" id="wn3-vy-XFT"/>
                             <constraint firstItem="glM-XU-afh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="y4h-tv-7PF"/>
-                            <constraint firstItem="zXV-0m-TNB" firstAttribute="top" secondItem="geJ-bh-89e" secondAttribute="top" constant="-8" id="zXc-Ru-an0"/>
+                            <constraint firstItem="2d2-hC-w3d" firstAttribute="top" secondItem="f9L-dM-Xup" secondAttribute="bottom" constant="8" symbolic="YES" id="yyz-uB-afk"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="4MT-7k-Nt6"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="2918.320610687023" y="-2.1126760563380285"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="K82-c5-ZzZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="933-8h-86f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y8V-9g-q62">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="iBX-YB-dcZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QTP-gg-0HU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1991.6030534351144" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
